k8s/myapp.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp
spec:
  type: ClusterIP
  ports:
    - targetPort: 3000
      port: 3000
  selector:
      app: myapp
